<resources>
    <string name="app_name">RoadGuard</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">Nice to meet you, come join our community!\n<b>Login</b> if you already have an account.\n<b>Register</b> to get started with the app.</string>
    <string name="illustration_image">Illustration Image</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <string name="login_sub_title"><font color="#FF4CAF50"><b>Login</b></font> if you already have an account.</string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">I don\'t have an account <font color="#FF4CAF50"><b>Register</b></font></string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title"><font color="#FF4CAF50"><b>Register</b></font> to get started with the app.</string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_have_account">I already have an account <font color="#FF4CAF50"><b>Login</b></font></string>
    <string name="home_title">Hello World!</string>
    <string name="home_sub_title">Welcome home</string>
    <string name="btn_logout">Logout</string>
    <string name="register_last_name">Your last name</string>
    <string name="register_first_name">Your first name</string>
    <string name="register_phone">Your phone number</string>
    <string name="home_stop_camera">Stop Camera</string>
    <string name="home_start_camera">Start Camera</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="email_paragraph">To confirm your email address, we have sent you an email on %s with a link to verify your account.</string>
    <string name="verify_email">Confirmed</string>
    <string name="resend_email">Resend Email</string>
    <string name="chooser_title">Choose your email app</string>
    <string name="open_map">Open Map</string>
    <string name="API_KEY">4EBD8459736F407D9697AED213DBDAF6</string>
    <string name="website_url">https://roadguard.azurewebsites.net</string>
    <string name="tv_login_error" />
    <string name="tv_register_error" />
    <string name="btn_settings">Settings</string>
    <string name="email_resend_success">Email sent successfully</string>
    <string name="tv_otp_title">Enter your OTP\n(One-Time Password)</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_resend_otp">Resend OTP</string>
    <string name="tv_otp_error" />
    <string name="btn_save_settings">SAVE</string>
    <string name="title_my_emergency_contacts">My RoadGuards</string>
    <string name="add_contact">Add RoadGuard</string>
    <string name="et_searchEC">Enter RoadGuard name or phone number</string>
    <string name="roadguardees_title">RoadGuardees</string>
    <string name="menu_roadguardees">Roadguardees</string>
    <string name="menu_roadguards">Roadguards</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
</resources>