<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.OtpActivity">

    <TextView
        android:id="@+id/tv_otp_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_otp_title"
        android:layout_marginTop="30dp"
        style="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_title">

        <EditText
            android:id="@+id/et_otp_1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:gravity="center"
            android:textSize="35sp"
            android:maxLength="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/date/day_of_week" />
        <EditText
            android:id="@+id/et_otp_2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:gravity="center"
            android:textSize="35sp"
            android:maxLength="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toEndOf="@+id/et_otp_1"
            />
        <EditText
            android:id="@+id/et_otp_3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:gravity="center"
            android:textSize="35sp"
            android:maxLength="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toEndOf="@+id/et_otp_2"

            />
        <EditText
            android:id="@+id/et_otp_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:gravity="center"
            android:textSize="35sp"
            android:maxLength="1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toEndOf="@+id/et_otp_3"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tv_otp_error"
        android:gravity="center"
        android:textColor="@color/red"
        android:visibility="gone"
        android:id="@+id/tv_otp_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_otp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_resend_otp"
        style="@style/ButtonAdaptive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_error" />
  </androidx.constraintlayout.widget.ConstraintLayout>